--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -370,3 +370,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
