--- a/StarWarsTraining_UE5.uproject
+++ b/StarWarsTraining_UE5.uproject
@@ -36,6 +36,15 @@
 				"Android"
 			]
 		},
+		{
+			"Name": "Bridge",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Mac",
+				"Linux"
+			]
+		}
 	],
 	"TargetPlatforms": [
 		"Android",
