Initial version of FCL running on Star Wars drone - there is a simple PID controller to pull the drone back to a centre point, and a fixed 'flinch' behaviour that operates when the projectile collides with the drone.

--- a/StarWarsTraining_UE5.uproject
+++ b/StarWarsTraining_UE5.uproject
@@ -35,12 +35,19 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "Bridge",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Mac",
+				"Linux"
+			]
 		}
 	],
 	"TargetPlatforms": [
 		"Android",
-		"IOS",
-		"Linux",
 		"Mac",
 		"PS4",
 		"PS5",
@@ -48,7 +55,6 @@
 		"WindowsNoEditor",
 		"Switch",
 		"XboxOne",
-		"XSX",
-		"HoloLens"
+		"XSX"
 	]
 }
